# ManiSkill-GS

./: .gitignore  README.md  pyproject.toml  setup.py
mani_skill_gs/: __init__.py
mani_skill_gs/env_simulation/: __init__.py  ms_configs.py  ms_env.py  ms_robot.py
mani_skill_gs/gs_renderer/: __init__.py  gs_env.py  gs_model.py  gs_params.py  gs_viewer.py  splat_facto_model.py
mani_skill_gs/utils/: __init__.py  utils_gs.py  utils_img.py
motionplan/: data_collector.py  motionplanner.py
motionplan/solutions/: pick_cube.py
scripts/: align_sim_gs.py  collect_data.py  eval_franka.py  eval_openpi.py  test_rlinf_interface.py  view_gs.py
